bk_ida/gccida/g0/regrename_optimize
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regrename_optimize/src/regrename.c:829:11: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[*( ( unsigned __int8 *)*this->loc + 2)] == MODE_COMPLEX_INT 
          ^~~~~~~~~~~~
          mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regrename_optimize/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regrename_optimize/src/regrename.c:830:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( ( unsigned __int8 *)*this->loc + 2)] == MODE_COMPLEX_FLOAT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regrename_optimize/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regrename_optimize/src/regrename.c:853:44: error: use of undeclared identifier 'machine_mode'
tmp && ix86_hard_regno_mode_ok( new_reg, ( machine_mode)*( ( unsigned __int8 *)*tmp->loc + 2)); 
                                           ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regrename_optimize/src/obj/regrename.o] Error 1
